--- a/software/static/main.css
+++ b/software/static/main.css
@@ -3,12 +3,29 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   background-color: #021532;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.basic-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 10% 1fr 10%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.grid-header {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.grid-main {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.grid-footer {
+  grid-area: 3 / 1 / 4 / 2;
 }
